fix overflow hidden

--- a/wp-content/themes/yaledailynews/bootstrap/less/magazine.less
+++ b/wp-content/themes/yaledailynews/bootstrap/less/magazine.less
@@ -20,7 +20,6 @@ body.magazine {
 
     .item {
       position:relative;
-      overlow: hidden;
     }
   }
 
@@ -39,6 +38,7 @@ body.magazine {
 
     .content-list .item {
         margin-bottom: 0; //override defaults from content-list
+        overflow: hidden;
     }
 
     #cover {
